# pygpt

./: README.md  pyproject.toml
pygpt/: __init__.py  __main__.py  gptai.py
pygpt.egg-info/: PKG-INFO  SOURCES.txt
