[build-system]
requires = ["setuptools>=61.0", "openai"]
build-backend = "setuptools.build_meta"
[project]
name = "pygpt"
version = "0.0.1"
authors = [
  { name="Gabriel Michael Ojomakpene", email="codewitgabi222@gmail.com" },
]
description = "A package that enables usage of chatgpt on the command line"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/codewitgabi/pygpt"
"Bug Tracker" = "https://github.com/codewitgabi/pygpt/issues"